// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkboxField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-0 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-0[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-0[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-0[aria-disabled='true'] .emotion-5 {
  fill: #e9eaeb;
}

.emotion-0[aria-disabled='true'] .emotion-5 .emotion-7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 {
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 .emotion-7 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-0 .emotion-3:checked+.emotion-5 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-0 .emotion-3:checked+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0 .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #e51963;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-2 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-2:not(:disabled) {
  cursor: pointer;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-2:not(:disabled):checked+.emotion-5,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 {
  fill: #8c40ef;
}

.emotion-2:not(:disabled):checked+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #8c40ef;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 {
  fill: #ffebf2;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 .emotion-7 {
  stroke: #b3144d;
}

.emotion-2:focus+.emotion-5 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:focus+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-4 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-4 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-6 {
  fill: #ffffff;
  stroke: #d9dadd;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-disabled="false"
        class="emotion-0 emotion-1"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          aria-invalid="false"
          class="emotion-2 emotion-3"
          id="«r0»"
          name="test"
          type="checkbox"
        />
        <svg
          class="emotion-4 emotion-5"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="emotion-6 emotion-7"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`checkboxField > should render correctly checked without value 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-0 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-0[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-0[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-0[aria-disabled='true'] .emotion-5 {
  fill: #e9eaeb;
}

.emotion-0[aria-disabled='true'] .emotion-5 .emotion-7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 {
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 .emotion-7 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-0 .emotion-3:checked+.emotion-5 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-0 .emotion-3:checked+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0 .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #e51963;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-2 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-2:not(:disabled) {
  cursor: pointer;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-2:not(:disabled):checked+.emotion-5,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 {
  fill: #8c40ef;
}

.emotion-2:not(:disabled):checked+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #8c40ef;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 {
  fill: #ffebf2;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 .emotion-7 {
  stroke: #b3144d;
}

.emotion-2:focus+.emotion-5 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:focus+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-4 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-4 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-6 {
  fill: #ffffff;
  stroke: #d9dadd;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-disabled="false"
        class="emotion-0 emotion-1"
        data-checked="true"
        data-error="false"
      >
        <input
          aria-checked="true"
          aria-invalid="false"
          checked=""
          class="emotion-2 emotion-3"
          id="«r6»"
          name="checked"
          type="checkbox"
        />
        <svg
          class="emotion-4 emotion-5"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="emotion-6 emotion-7"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`checkboxField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-0 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-0[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-0[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-0[aria-disabled='true'] .emotion-5 {
  fill: #e9eaeb;
}

.emotion-0[aria-disabled='true'] .emotion-5 .emotion-7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 {
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 .emotion-7 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-0 .emotion-3:checked+.emotion-5 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-0 .emotion-3:checked+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0 .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #e51963;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-2 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-2:not(:disabled) {
  cursor: pointer;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-2:not(:disabled):checked+.emotion-5,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 {
  fill: #8c40ef;
}

.emotion-2:not(:disabled):checked+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #8c40ef;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 {
  fill: #ffebf2;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 .emotion-7 {
  stroke: #b3144d;
}

.emotion-2:focus+.emotion-5 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:focus+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-4 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-4 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-6 {
  fill: #ffffff;
  stroke: #d9dadd;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-disabled="true"
        class="emotion-0 emotion-1"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          aria-invalid="false"
          class="emotion-2 emotion-3"
          disabled=""
          id="«r4»"
          name="test"
          type="checkbox"
        />
        <svg
          class="emotion-4 emotion-5"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="emotion-6 emotion-7"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`checkboxField > should render correctly not checked without value 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-0 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-0[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-0[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-0[aria-disabled='true'] .emotion-5 {
  fill: #e9eaeb;
}

.emotion-0[aria-disabled='true'] .emotion-5 .emotion-7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 {
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 .emotion-7 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-0 .emotion-3:checked+.emotion-5 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-0 .emotion-3:checked+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0 .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #e51963;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-2 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-2:not(:disabled) {
  cursor: pointer;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-2:not(:disabled):checked+.emotion-5,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 {
  fill: #8c40ef;
}

.emotion-2:not(:disabled):checked+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #8c40ef;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 {
  fill: #ffebf2;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 .emotion-7 {
  stroke: #b3144d;
}

.emotion-2:focus+.emotion-5 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:focus+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-4 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-4 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-6 {
  fill: #ffffff;
  stroke: #d9dadd;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-disabled="false"
        class="emotion-0 emotion-1"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          aria-invalid="false"
          class="emotion-2 emotion-3"
          id="«r8»"
          name="checked"
          type="checkbox"
        />
        <svg
          class="emotion-4 emotion-5"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="emotion-6 emotion-7"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`checkboxField > should render correctly with aria-label 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-0 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-0[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-0[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-0[aria-disabled='true'] .emotion-5 {
  fill: #e9eaeb;
}

.emotion-0[aria-disabled='true'] .emotion-5 .emotion-7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 {
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 .emotion-7 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-0 .emotion-3:checked+.emotion-5 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-0 .emotion-3:checked+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0 .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #e51963;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-2 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-2:not(:disabled) {
  cursor: pointer;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-2:not(:disabled):checked+.emotion-5,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 {
  fill: #8c40ef;
}

.emotion-2:not(:disabled):checked+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #8c40ef;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 {
  fill: #ffebf2;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 .emotion-7 {
  stroke: #b3144d;
}

.emotion-2:focus+.emotion-5 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:focus+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-4 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-4 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-6 {
  fill: #ffffff;
  stroke: #d9dadd;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-disabled="false"
        class="emotion-0 emotion-1"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          aria-invalid="false"
          aria-label="test"
          class="emotion-2 emotion-3"
          id="«r2»"
          name="test"
          type="checkbox"
        />
        <svg
          class="emotion-4 emotion-5"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="emotion-6 emotion-7"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`checkboxField > should render correctly with errors 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-0 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-0[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-0[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-0[aria-disabled='true'] .emotion-5 {
  fill: #e9eaeb;
}

.emotion-0[aria-disabled='true'] .emotion-5 .emotion-7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 {
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 .emotion-7 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-0 .emotion-3:checked+.emotion-5 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-0 .emotion-3:checked+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0 .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #e51963;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-2 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-2:not(:disabled) {
  cursor: pointer;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-2:not(:disabled):checked+.emotion-5,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 {
  fill: #8c40ef;
}

.emotion-2:not(:disabled):checked+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #8c40ef;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 {
  fill: #ffebf2;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 .emotion-7 {
  stroke: #b3144d;
}

.emotion-2:focus+.emotion-5 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:focus+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-4 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-4 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-6 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-8 {
  width: 100%;
  cursor: pointer;
}

.emotion-10 {
  padding-top: 0.25rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-disabled="false"
        class="emotion-0 emotion-1"
        data-checked="false"
        data-error="true"
      >
        <input
          aria-checked="false"
          aria-describedby="«rd»-hint"
          aria-invalid="true"
          class="emotion-2 emotion-3"
          id="«rd»"
          name="test"
          type="checkbox"
        />
        <svg
          class="emotion-4 emotion-5"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="emotion-6 emotion-7"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            style="--uv_4k0ekn3: 1;"
          >
            <label
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              for="«rd»"
            >
              Checkbox field error
            </label>
          </div>
          <span
            class="emotion-10 emotion-11 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owd uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow1k uv_m4c9ow3c"
          >
            This field is required
          </span>
        </div>
      </div>
      <div>
        Focus
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`checkboxField > should trigger events correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.emotion-0 .eqr7bqq3 {
  cursor: pointer;
}

.emotion-0[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-0[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.emotion-0[aria-disabled='true'] .emotion-5 {
  fill: #e9eaeb;
}

.emotion-0[aria-disabled='true'] .emotion-5 .emotion-7 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 {
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3:checked+.emotion-5 .emotion-7 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 {
  fill: #e5dbfd;
}

.emotion-0[aria-disabled='true'] .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-0 .emotion-3:checked+.emotion-5 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-0 .emotion-3:checked+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0 .emotion-3[aria-invalid="true"]:checked+.emotion-5 .emotion-7 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .eqr7bqq5 {
  fill: #ffffff;
}

.emotion-0 .emotion-3[aria-checked="mixed"]+.emotion-5 .emotion-7 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='false'][aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='false']+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-0:hover[aria-disabled='false'] .emotion-3[aria-invalid='true'][aria-checked='true']+.emotion-5 .emotion-7 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 {
  fill: #e51963;
}

.emotion-0 .emotion-3[aria-invalid="true"]+.emotion-5 .emotion-7 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-2 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-2:not(:disabled) {
  cursor: pointer;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-2:not(:disabled):checked+.emotion-5,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 {
  fill: #8c40ef;
}

.emotion-2:not(:disabled):checked+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-checked='mixed']+.emotion-5 .emotion-7 {
  stroke: #8c40ef;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 {
  fill: #ffebf2;
}

.emotion-2:not(:disabled)[aria-invalid='true']+.emotion-5 .emotion-7,
.emotion-2:not(:disabled)[aria-invalid='mixed']+.emotion-5 .emotion-7 {
  stroke: #b3144d;
}

.emotion-2:focus+.emotion-5 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-2:focus+.emotion-5 .emotion-7 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-2[aria-invalid='true']:focus+.emotion-5 .emotion-7 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-4 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-4 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-6 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-8 {
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-disabled="false"
        class="emotion-0 emotion-1"
        data-checked="true"
        data-error="false"
      >
        <input
          aria-checked="true"
          aria-invalid="false"
          class="emotion-2 emotion-3"
          id="«ra»"
          name="test"
          type="checkbox"
        />
        <svg
          class="emotion-4 emotion-5"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="emotion-6 emotion-7"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
        <div
          class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            style="--uv_4k0ekn3: 1;"
          >
            <label
              class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              for="«ra»"
            >
              Checkbox field events
            </label>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
